--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ show_minimal: false             # remove all clutter
 # Menu                          # for available icons see https://fontawesome.com/v5/icons/
 
 navigation:                     # accepts {file, title, url, icon, sidebaricon}
-  - {title: "About me"}
+  - {title: "People"}
   - {title: "Research"}
   - {title: "Publications"}
 
