--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ navigation:                     # accepts {file, title, url, icon, sidebaricon}
   - {title: "People"}
   - {title: "Research"}
   - {title: "Publications"}
+  - {title: "Blog"}
 
 external:                       # accepts {file, title, url, icon, sidebaricon}
   - {title: Mail, icon: envelope, url: "zhangk@lincolnu.edu"}
