--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ show_minimal: false             # remove all clutter
 navigation:                     # accepts {file, title, url, icon, sidebaricon}
   - {title: "People"}
   - {title: "Research"}
-  - {title: "Publications", file: "publication.html"}
+  - {title: "Publications", file: "publication.md"}
   - {title: "Blog"}
 
 external:                       # accepts {file, title, url, icon, sidebaricon}
