--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ show_minimal: false             # remove all clutter
 
 navigation:                     # accepts {file, title, url, icon, sidebaricon}
   - {title: "People"}
-  - {title: "Research", file: "Research.html"}
+  - {title: "Research", url: "Research.html"}
   - {title: "Publications", file: "publication.md"}
   - {title: "Blog"}
 
