--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Soil Microbial Ecology Lab"
 author: "Kaile Zhang"
-description: "My blog"
+description: ""
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
